tests/fail/snapshot_outlive_txndb.stderr
error[E0597]: `db` does not live long enough
 --> tests/fail/snapshot_outlive_txndb.rs:6:9
  |
4 |     let _snapshot = {
  |         --------- borrow later stored here
5 |         let db = TxnDB::open_default("foo").unwrap();
6 |         db.snapshot()
  |         ^^ borrowed value does not live long enough
7 |     };
  |     - `db` dropped here while still borrowed
